added start to scripts in package.json file

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "jest": "^27.0.4"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node project/main.js"
   },
   "repository": {
     "type": "git",
